@@ -37,6 +37,17 @@ import org.matsim.vis.otfvis.OnTheFlyServer.NonPlanAgentQueryHelper;
 import com.google.inject.Inject;
 
 public class OTFVisLiveModule extends AbstractModule {
+
+	/**
+	 * For win, one needs to add
+	 * <code>
+	 *         --add-exports java.base/java.lang=ALL-UNNAMED --add-exports java.desktop/sun.awt=ALL-UNNAMED --add-exports java.desktop/sun.java2d=ALL-UNNAMED
+	 * </code>
+	 * as arguments to the JVM to get around module protection. 
+	 */
+	public OTFVisLiveModule() {
+		// so I can attach javadoc to this. kai, may'24
+	}
     
 	@Override
 	public void install() {
